simplify Makefile.am

--- a/EXAMPLES/SIMPLE/Makefile.am
+++ b/EXAMPLES/SIMPLE/Makefile.am
@@ -1,33 +1,7 @@
-check_PROGRAMS = cnsimp dnsimp dssimp snsimp sssimp znsimp
-
-cnsimp_SOURCES = cnsimp.f
-
-cnsimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-dnsimp_SOURCES = dnsimp.f
-
-dnsimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-dssimp_SOURCES = dssimp.f
-
-dssimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-snsimp_SOURCES = snsimp.f
-
-snsimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-sssimp_SOURCES = sssimp.f
-
-sssimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-znsimp_SOURCES = znsimp.f
-
-znsimp_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
 TESTS = cnsimp dnsimp dssimp snsimp sssimp znsimp
 
+check_PROGRAMS = $(TESTS)
+
+AM_DEFAULT_SOURCE_EXT = .f
+
+LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
