--- a/EXAMPLES/SVD/Makefile.am
+++ b/EXAMPLES/SVD/Makefile.am
@@ -1,12 +1,7 @@
-check_PROGRAMS = dsvd ssvd
-
-dsvd_SOURCES = dsvd.f
-
-dsvd_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
-
-ssvd_SOURCES = ssvd.f
-
-ssvd_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
-
 TESTS = dsvd ssvd
+
+check_PROGRAMS = $(TESTS)
+
+AM_DEFAULT_SOURCE_EXT = .f
+
+LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)
