--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 
 script:
   - ./bootstrap
-  - ./configure --enable-mpi
+  - CFLAGS="-fno-omit-frame-pointer -fsanitize=address" ./configure --enable-mpi
   - make all
   - make check
   - make distcheck
