--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ sudo: false
 language: c
 
 compiler:
-  - gcc
+  - gcc-4.8
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-      - gfortran
+      - gfortran-4.8
+      - gcc-4.8
       - libopenblas-dev
       - liblapack-dev
       - libopenmpi-dev
@@ -16,7 +19,7 @@ addons:
 
 script:
   - ./bootstrap
-  - CFLAGS="-fno-omit-frame-pointer -fsanitize=address" ./configure --enable-mpi
+  - F77="gfortran-4.8" CFLAGS="-fno-omit-frame-pointer -fsanitize=address" ./configure --enable-mpi
   - make all
   - make check
   - make distcheck
